# mso

./: LICENSE  README.md  mso-bench.html  mso.cabal
app/: mso.hs
bench/: mso-bench.hs
bench/Data/: FormulaBench.hs
bench/Some/: ModuleBench.hs
src/Data/: Formula.hs
src/Some/: Module.hs
test/: mso-test.hs
test/Data/: FormulaTest.hs
test/Some/: ModuleTest.hs
