name:                mso
version:             0.1.0.0
synopsis:            Monadic second order logic.
description:         Please see README.md
homepage:            https://github.com/jokusi/mso#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Jos Kusiek
maintainer:          jos.kusiek@tu-dortmund.de
copyright:           2017 Jos Kusiek
category:            Logic
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Some.Module
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  -- other-modules:
  -- other-extensions:

executable mso
  hs-source-dirs:      app
  main-is:             mso.hs
  ghc-options:         -threaded -rtsopts=none -with-rtsopts=-N
  -- for profiling:
  -- ghc-options:         -threaded -rtsopts "-with-rtsopts=-N -p -hc -i0.1"
  build-depends:       base
                     , mso
  default-language:    Haskell2010

test-suite mso-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             mso-test.hs
  build-depends:       base
                     , mso
                     , tasty
                     , tasty-th
                     , tasty-quickcheck
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       Some.ModuleTest

Benchmark mso-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             mso-bench.hs
  build-depends:       base
                     , mso
                     , criterion
  default-language:    Haskell2010
  other-modules:       Some.ModuleBench

source-repository head
  type:     git
  location: https://github.com/jokusi/mso
